[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/gray_panel_screws_stylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://src/ui/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/match/MenuScreen.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -128.0
margin_right = 280.0
margin_bottom = 128.0
grow_horizontal = 2
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 630.0
margin_bottom = 229.0
custom_constants/margin_right = 50
custom_constants/margin_top = 15
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 50.0
margin_top = 15.0
margin_right = 530.0
margin_bottom = 179.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 480.0
margin_bottom = 52.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "MENU_RETURN_TO_MATCH"

[node name="SettingsButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 56.0
margin_right = 480.0
margin_bottom = 108.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "MENU_SETTINGS"

[node name="Exit" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 112.0
margin_right = 480.0
margin_bottom = 164.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "MENU_EXIT"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
